--- a/css/style.css
+++ b/css/style.css
@@ -177,8 +177,9 @@ button:focus,
     -webkit-flex : 1 0 0;
     flex         : 1 0 0;
     position     : relative;
-    background   : rgba(255, 255, 255, .8);
+    background   : #2aa8ec;
     border-right : 1px solid #eaeaea;
+    color: #ffffff;
     }
 
 .right-col-block {
@@ -268,7 +269,11 @@ button:focus,
     }
 
 .header .profile-img {
-    margin-bottom : 50px;
+    margin: auto;
+    margin-bottom : 40px;
+    width: 200px;
+    border:5px solid #ffffff;
+    border-radius:50%;
     }
 
 .header .content-wrapper {
@@ -292,6 +297,10 @@ button:focus,
 .header .content .about-text {
     margin : 10px 0;
     }
+
+.header h1{
+    color: #ffffff;
+}
 
 .header .btn {
     margin-top : 40px;
